opam-version: "2.0"
name: "chunkee"
synopsis: "flop compiler frontend"
version: "0.0.1"
maintainer: "pjb4752 <pjb4752@gmail.com>"
authors: "pjb4752 <pjb4752@gmail.com>"
homepage: "https://github.com/pjb4752/chunkee"
bug-reports: "https://github.com/pjb4752/chunkee/issues"
dev-repo: "git://github.com/pjb4752/chunkee.git"
build: [
  ["jbuilder" "build" "--only" "chunkee" "--root" "." "-j" jobs "@install"]
]
